# tree-ring-ringid

./: .gitignore  0.4  README.md  colab_generate_only.ipynb  colab_generate_run.ipynb  paper.txt  pyproject.toml  requirements-cu128.txt  requirements.txt
batch_run/: key.json  manifest.json
evaluation/: README.md  run_attacks_eval.py  run_pipeline.py
src/ringid/: __init__.py  attacks.py  cli_eval.py  cli_generate.py  cli_identify.py  cli_verify.py  config.py  detect.py  inversion.py  sampling.py  torch_env.py  watermark.py
tests/: test_watermark_ops.py
